Fixes all aria stuff related to collapsocraptastic.

--- a/assets/sass/isc-styles.scss
+++ b/assets/sass/isc-styles.scss
@@ -732,6 +732,7 @@ body, p { font-size: 16px !important; }
 
 /*** collapse-o-matic ***/
 
+.isc-collapse { text-align: right; font-size: 13px; }
 .isc-expand { background: #eee !important;
     p, span { font-size: 16px !important; }
 }
